workReport action 초기 파일 구조를 잡아라

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Larry Kim (zebra0303@gmail.com)",
   "license": "GNU GENERAL PUBLIC LICENSE",
   "scripts": {
-    "test": "node index.js --env=test"
+    "test": "node index.js --env=test act=workReport"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
